--- a/index.html
+++ b/index.html
@@ -58,23 +58,25 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 5px;
+      gap: 10px;
     }
     .card h2 {
       font-size: 1.2em;
       margin: 0;
       color: var(--main-color);
-      line-height: 1.2;
+      line-height: 1.4;
       flex: 1;
-      min-width: 0;
-      white-space: nowrap;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
       overflow: hidden;
       text-overflow: ellipsis;
+      min-width: 0;
     }
     .card .date {
       font-size: 0.75em;
       color: #777;
       white-space: nowrap;
-      margin-left: 10px;
       flex-shrink: 0;
     }
     .card .content-preview {
@@ -266,7 +268,7 @@ function renderArticles() {
 function createCard(article) {
   const card = document.createElement("div");
   card.className = "card";
-  const preview = (article.content || article.summary || "本文なし").substring(0, 15) + "…";
+  const preview = (article.content || article.summary || "本文なし").replace(/\s+/g, '').slice(0, 15) + "…";
   card.innerHTML = `
     <div class="title-date">
       <h2>${article.title}</h2>
