--- a/index.html
+++ b/index.html
@@ -55,30 +55,30 @@
       box-shadow: 0 12px 24px rgba(0,0,0,0.15);
     }
     .card .title-date {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 5px;
-      gap: 10px;
-    }
-    .card h2 {
-      font-size: 1.2em;
-      margin: 0;
-      color: var(--main-color);
-      line-height: 1.4;
-      flex: 1;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      min-width: 0;
-    }
-    .card .date {
-      font-size: 0.75em;
-      color: #777;
-      white-space: nowrap;
-      flex-shrink: 0;
+  position: relative; /* 追加！ */
+  display: block; /* flexやめる */
+  margin-bottom: 5px;
+}
+
+.card h2 {
+  font-size: 1.2em;
+  margin: 0;
+  color: var(--main-color);
+  line-height: 1.4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.card .date {
+  position: absolute; /* 追加！ */
+  top: 0;
+  right: 0;
+  font-size: 0.75em;
+  color: #777;
+  white-space: nowrap;
     }
     .card .content-preview {
       font-size: 0.85em;
