--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    /* --- カラーテーマ、全体スタイル --- */
     :root {
       --main-color: #0d47a1;
       --accent-color: #1976d2;
@@ -32,6 +33,7 @@
       font-size: 2.5em;
       color: var(--main-color);
     }
+    /* --- カードスタイル --- */
     .card {
       position: relative;
       background: var(--card-bg);
@@ -55,30 +57,27 @@
       box-shadow: 0 12px 24px rgba(0,0,0,0.15);
     }
     .card .title-date {
-  position: relative; /* 追加！ */
-  display: block; /* flexやめる */
-  margin-bottom: 5px;
-}
-
-.card h2 {
-  font-size: 1.2em;
-  margin: 0;
-  color: var(--main-color);
-  line-height: 1.4;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
-
-.card .date {
-  position: absolute; /* 追加！ */
-  top: 0;
-  right: 0;
-  font-size: 0.75em;
-  color: #777;
-  white-space: nowrap;
+      position: relative;
+      margin-bottom: 5px;
+    }
+    .card h2 {
+      font-size: 1.2em;
+      margin: 0;
+      color: var(--main-color);
+      line-height: 1.4;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
+    .card .date {
+      position: absolute;
+      top: 0;
+      right: 0;
+      font-size: 0.75em;
+      color: #777;
+      white-space: nowrap;
     }
     .card .content-preview {
       font-size: 0.85em;
@@ -102,6 +101,7 @@
     .card .actions a:hover {
       background: var(--accent-color);
     }
+    /* --- ナビゲーション --- */
     nav {
       text-align: center;
       margin-top: 40px;
@@ -120,6 +120,7 @@
     nav a:hover {
       background: var(--accent-color);
     }
+    /* --- ボタン --- */
     #toggleMonthView {
       background: var(--main-color);
       color: white;
@@ -137,7 +138,7 @@
     #toggleMonthView:hover {
       background: var(--accent-color);
     }
-    /* スマホ対応 */
+    /* --- スマホ対応 --- */
     @media (max-width: 600px) {
       .card {
         height: 100px;
@@ -159,6 +160,7 @@
     }
   </style>
 </head>
+
 <body>
 
 <h1>記事一覧</h1>
@@ -173,7 +175,7 @@
 </nav>
 
 <script>
-// タイトルを2行以内に収める＋スマホ時はさらに1文字短く
+/* --- タイトルを2行以内に整える --- */
 function fitTitleInTwoLines(titleText) {
   const temp = document.createElement('h2');
   temp.style.visibility = 'hidden';
@@ -182,19 +184,14 @@ function fitTitleInTwoLines(titleText) {
   temp.style.left = '-9999px';
   temp.style.width = 'calc(100% - 80px)';
   temp.style.fontSize = window.innerWidth <= 600 ? '1em' : '1.2em';
-  temp.style.fontWeight = 'bold';
   temp.style.lineHeight = '1.4';
-  temp.style.padding = '0';
-  temp.style.margin = '0';
-  temp.style.whiteSpace = 'normal';
   temp.textContent = titleText;
   document.body.appendChild(temp);
 
   const oneLineHeight = temp.offsetHeight;
   const maxAllowedHeight = oneLineHeight * 2;
-
   let fitted = titleText;
-  let extraCut = window.innerWidth <= 600 ? 1 : 0; // スマホならさらに1文字短く
+  let extraCut = window.innerWidth <= 600 ? 1 : 0;
 
   while ((temp.offsetHeight > maxAllowedHeight || extraCut > 0) && fitted.length > 0) {
     fitted = fitted.slice(0, -1);
@@ -203,10 +200,10 @@ function fitTitleInTwoLines(titleText) {
   }
 
   document.body.removeChild(temp);
-
   return fitted.length < titleText.length ? fitted + '…' : fitted;
 }
 
+/* --- 記事一覧の表示 --- */
 const articlesList = document.getElementById("articlesList");
 const toggleMonthView = document.getElementById("toggleMonthView");
 const articles = JSON.parse(localStorage.getItem('articles') || '{}');
@@ -251,7 +248,6 @@ function renderArticles() {
     });
 
     const months = Object.keys(grouped).sort((a, b) => b.localeCompare(a));
-
     months.forEach(month => {
       const monthSection = document.createElement("section");
       monthSection.style.marginTop = "40px";
@@ -316,6 +312,7 @@ function createCard(article) {
   return card;
 }
 
+/* --- 最初に実行 --- */
 renderArticles();
 </script>
 
