--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
       color: var(--main-color);
       line-height: 1.4;
       overflow: hidden;
-      text-overflow: ellipsis;
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
+      text-overflow: ellipsis;
+      padding-right: 80px; /* ← ここで日付のスペース確保 */
     }
     .card .date {
       position: absolute;
@@ -128,19 +129,38 @@
     #toggleMonthView:hover {
       background: var(--accent-color);
     }
+
+    /* スマホ対応 */
     @media (max-width: 600px) {
       .card {
-        height: 100px;
+        height: auto;
         padding: 10px;
+      }
+      .card .title-date {
+        display: block;
+        position: relative;
       }
       .card h2 {
         font-size: 1em;
+        padding-right: 80px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        line-height: 1.4;
       }
       .card .date {
+        position: absolute;
+        top: 0;
+        right: 10px;
         font-size: 0.65em;
+        color: #777;
+        white-space: nowrap;
       }
       .card .content-preview {
         font-size: 0.75em;
+        margin-top: 6px;
       }
       .card .actions a {
         font-size: 0.7em;
@@ -164,6 +184,7 @@
 </nav>
 
 <script>
+// fitTitleInTwoLines関数はそのままOK
 function fitTitleInTwoLines(titleText) {
   const temp = document.createElement('h2');
   temp.style.cssText = 'visibility:hidden;position:absolute;width:calc(100% - 80px);font-size:' +
