--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
       color: var(--main-color);
       line-height: 1.4;
       overflow: hidden;
+      text-overflow: ellipsis;
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
-      text-overflow: ellipsis;
-      padding-right: 80px; /* ← ここで日付のスペース確保 */
     }
     .card .date {
       position: absolute;
@@ -129,38 +128,20 @@
     #toggleMonthView:hover {
       background: var(--accent-color);
     }
-
-    /* スマホ対応 */
     @media (max-width: 600px) {
       .card {
-        height: auto;
+        height: 100px;
         padding: 10px;
       }
-      .card .title-date {
-        display: block;
-        position: relative;
-      }
       .card h2 {
-        font-size: 1em;
-        padding-right: 80px;
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        text-overflow: ellipsis;
-        line-height: 1.4;
+        font-size: 0.9em; /* 小さめ */
+        max-width: calc(100% - 60px); /* 日付スペース確保して幅を制限 */
       }
       .card .date {
-        position: absolute;
-        top: 0;
-        right: 10px;
         font-size: 0.65em;
-        color: #777;
-        white-space: nowrap;
       }
       .card .content-preview {
         font-size: 0.75em;
-        margin-top: 6px;
       }
       .card .actions a {
         font-size: 0.7em;
@@ -184,11 +165,10 @@
 </nav>
 
 <script>
-// fitTitleInTwoLines関数はそのままOK
 function fitTitleInTwoLines(titleText) {
   const temp = document.createElement('h2');
   temp.style.cssText = 'visibility:hidden;position:absolute;width:calc(100% - 80px);font-size:' +
-    (window.innerWidth <= 600 ? '1em' : '1.2em') + ';line-height:1.4;';
+    (window.innerWidth <= 600 ? '0.9em' : '1.2em') + ';line-height:1.4;';
   temp.textContent = titleText;
   document.body.appendChild(temp);
 
@@ -225,7 +205,7 @@ function formatDate(dateStr) {
 function createCard(article) {
   const card = document.createElement("div");
   card.className = "card";
-  const preview = (article.content || article.summary || "本文なし").replace(/\s+/g, '').slice(0, 14) + "…";
+  const preview = (article.content || article.summary || "本文なし").replace(/\s+/g, '').slice(0, 15) + "…";
 
   card.innerHTML = `
     <div class="title-date">
